overflow: auto on the form introduces a bug, it's therefore set to hidden for now

--- a/app/styles/_form.scss
+++ b/app/styles/_form.scss
@@ -10,7 +10,7 @@ form {
 	padding: $base-spacing;
 
 	max-height: 70%;
-	overflow: auto;
+	overflow: hidden;
 
 	transition: background .1s ease;
 
